# from-scratch1

./: .gitignore  README.md  main.py  pyproject.toml
ch2/: and_gate.py  nand_gate.py  or_gate.py  xor_gate.py
ch3/: mnist_show.py  network.py  network_prototype.py  neuralnet_mnist.py  neuralnet_mnist_batch.py  relu_function.py  sigmoid_function.py  step_function.py  step_sig_comp.py
ch4/: gradient_1d.py  gradient_2d.py  gradient_method.py  gradient_simplenet.py  train_neuralnet.py  two_layer_net.py
ch5/: buy_apple.py  buy_apple_orange.py  gradient_check.py  layer_naive.py  train_neuralnet.py  two_layer_net.py
common/: functions.py  gradient.py  layers.py
dataset/: mnist.py
