[project]
name = "from-scratch1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common", "dataset"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"
