[project]
name = "from-scratch1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dpctl>=0.22.1",
    "dpnp>=0.20.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.34",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common", "dataset"]
